# facial-hci-agent

./: .env.example  .gitignore  Dockerfile  ETHICS.md  LICENSE  Procfile  README.md  fly.toml  pyproject.toml  railway.json  render.yaml  requirements.txt
.github/workflows/: ci.yml
dashboard/: server.py
dashboard/static/css/: style.css
dashboard/static/js/: app.js
dashboard/templates/: index.html
docs/: ARCHITECTURE.md  RESEARCH.md
scripts/: collect_training_data.py  run_agent.py  run_dashboard.py
src/facial_hci/: __init__.py  agent.py  config.py  logging_utils.py  privacy.py
src/facial_hci/features/: action_units.py  audio_prosody.py  blink_analysis.py  micro_expressions.py
src/facial_hci/inference/: cognitive_state.py  emotion_rules.py  llm_reasoner.py  multimodal_fusion.py
src/facial_hci/perception/: face_mesh.py  head_pose.py  iris_gaze.py
src/facial_hci/training/: evaluate.py  personalize.py
tests/: test_action_units.py  test_cognitive_state.py  test_confidence_intervals.py  test_config.py  test_emotion_rules.py  test_personalization.py  test_server_endpoints.py  test_temporal_smoothing.py
